# turtle-python

./: README.md  constants.py  pyproject.toml  turtle_oxford.py
doc/source/: conf.py  index.rst  requirements.txt  usage.rst
doc/source/api/: turtle_oxford.TurtleCanvas.rst  turtle_oxford.angles.rst  turtle_oxford.back.rst  turtle_oxford.circle.rst  turtle_oxford.colour_to_int.rst  turtle_oxford.detect.rst  turtle_oxford.direction.rst  turtle_oxford.ellipse.rst  turtle_oxford.forward.rst  turtle_oxford.get_key_code.rst  turtle_oxford.get_key_sym.rst  turtle_oxford.halt.rst  turtle_oxford.home.rst  turtle_oxford.maxint.rst  turtle_oxford.movexy.rst  turtle_oxford.new_turtle.rst  turtle_oxford.noupdate.rst  turtle_oxford.on_press.rst  turtle_oxford.on_release.rst  turtle_oxford.pause.rst  turtle_oxford.pendown.rst  turtle_oxford.penup.rst  turtle_oxford.pixcol.rst  turtle_oxford.pixset.rst  turtle_oxford.reset.rst  turtle_oxford.rgb.rst  turtle_oxford.right.rst  turtle_oxford.setxy.rst  turtle_oxford.sety.rst  turtle_oxford.status.rst  turtle_oxford.turnxy.rst  turtle_oxford.update.rst
docs/source/: api.rst  conf.py  index.rst
examples/: angles.py  check_keys.py  draw_pause.py  for_loop.py  game_of_life.py  mandelbrot_multi.py  resolution.py  robbythecleaner.py  search_map.py  stars.py  user_interaction.py
