[tool.poetry]
name = "turtle_oxford"
version = "0.1.0"
description = "Python module for the Turtle System (https://www.turtle.ox.ac.uk/)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [
    { include = "turtle_oxford.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
tk = "^0.1.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
